# gl_learn

./: .gitignore  CMakeLists.txt  README.md  utility.hpp
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
scripts/: build_linux.sh  build_run.sh  build_run_linux.sh
shaders/: vertex.glsl
src/: main.cpp
